--- a/package.json
+++ b/package.json
@@ -9,12 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.10",
+    "@fullcalendar/react": "^6.1.10",
+    "@fullcalendar/resource": "^6.1.10",
+    "@fullcalendar/resource-common": "^5.11.5",
+    "@fullcalendar/resource-timegrid": "^6.1.10",
+    "@fullcalendar/resource-timeline": "^6.1.10",
+    "@fullcalendar/timegrid": "^6.1.10",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@types/react-big-calendar": "^1.8.8",
+    "@types/react-big-scheduler": "^0.2.7",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "lucide-react": "^0.309.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-big-calendar": "^1.8.6",
+    "react-big-scheduler": "^0.2.7",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "sonner": "^1.3.1"
   },
