--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "sonner": "^1.3.1"
   },
   "devDependencies": {
