--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@fullcalendar/timegrid": "^6.1.10",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "@types/react-big-calendar": "^1.8.8",
     "@types/react-big-scheduler": "^0.2.7",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.309.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
@@ -35,7 +37,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
-    "sonner": "^1.3.1"
+    "sonner": "^1.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
