--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@types/react-big-calendar": "^1.8.8",
     "@types/react-big-scheduler": "^0.2.7",
+    "@types/uuid": "^9.0.8",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "framer-motion": "^11.0.3",
@@ -38,7 +39,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "sonner": "^1.3.1",
-    "zod": "^3.22.4"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
